--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.ts",
   "scripts": {
     "postinstall": "tsc",
+    "build": "tsc",
+    "serve": "ts-node ./dist/src/index.ts",
     "start": "yarn serve",
-    "serve": "ts-node index.ts",
     "watch": "nodemon index.ts",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master",
