--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "tsc",
     "start": "yarn serve",
     "serve": "ts-node ./src/index.ts",
-    "watch": "nodemon index.ts",
+    "watch": "nodemon ./src/index.ts",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+    "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm:cli migration:generate -n",
     "typeorm:migration:revert": "yarn typeorm:cli migration:revert",
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.17",
     "typescript": "^5.1.6"
   },
