--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "nodemon ./src/index.ts",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm:cli migration:generate -n",
     "typeorm:migration:revert": "yarn typeorm:cli migration:revert",
