--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "18.17.1"
   }
 }
