--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prepare": "husky install",
+    "seed": "ts-node ./src/pages/api/_server/seed/index.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm:cli migration:generate -n",
