--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "antd": "^5.11.1",
     "classnames": "^2.3.2",
+    "jspdf-html2canvas": "^1.5.1",
     "next": "14.0.2",
     "pg": "^8.11.3",
     "react": "^18",
